veux: overlay: Fix Video Calling
Co-Authored-By: AngeloGioacchino Del Regno <kholk11@gmail.com>
Co-Authored-By: IMMANUEL44 <immanuelr44@gmail.com>
Signed-off-by: Anar Jabiyev <cebiyevanar@gmail.com>
Signed-off-by: JaswalAshish48 <jaswalashish48@gmail.com>

--- a/rro_overlays/FrameworksResOverlayVeux/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayVeux/res/values/config.xml
@@ -827,5 +827,7 @@
 
     <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
-    
+
+    <!-- Enable video pause workaround when enabling/disabling the camera. -->
+    <bool name="config_useVideoPauseWorkaround">true</bool>
 </resources>
